sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:9: error: '(' expected but identifier found.
    if ecart > 1 {
       ^