sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  
  var ecart = getNombreValeurs();
  var i = 0;
  
  do {
    
    if ecart > 1 {
      ecart /=1.3
    }
    
    i = 0
    
    while (i+ecart < getNombreValeurs() ) {
      
      if (plusPetit(i , i+ecart)() == false) {
        
        echange(i, i+ecart)()
        i += 1
        a = 1
        
      }
    }
    
  } while ( ecart > 1 || a == 1)
  
}